--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,7 +12,8 @@
     "query-string": "7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.3.0"
+    "react-router-dom": "6.3.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
